<@eduarda96, @matheus-malta> Renderiza g radios bugados
Co-authored-by: eduarda96 <eduarda.bortoletti96@gmail.com>

--- a/app/src/main/resources/templates/solicitacao/editaPaciente.html
+++ b/app/src/main/resources/templates/solicitacao/editaPaciente.html
@@ -34,11 +34,11 @@
                     <div class="field">
                         <div class="control">
                             <label>
-                                <input th:field="*{genero}" type="radio" value="F" id="genero1">
+                                <input th:field="*{genero}" type="radio" value="Feminino" id="genero1">
                                 <span>Feminino</span>
                             </label>
                             <label>
-                                <input th:field="*{genero}" type="radio" value="M" id="genero2">
+                                <input th:field="*{genero}" type="radio" value="Masculino" id="genero2">
                                 <span>Masculino</span>
                             </label>
                         </div>
@@ -67,11 +67,11 @@
                         <div class="control">
                             <span>Situação:</span>
                             <label>
-                                <input th:field="*{situacao}" type="radio" value="pre" id="situacao.pre">
+                                <input th:field="*{situacao}" type="radio" value="pre-transplante" id="situacao.pre">
                                 <span>Pré-transplante</span>
                             </label>
                             <label>
-                                <input th:field="*{situacao}" type="radio" value="pos" id="situacao.pos">
+                                <input th:field="*{situacao}" type="radio" value="pos-transplante" id="situacao.pos">
                                 <span>Pós-transplante</span>
                             </label>
                         </div>
