--- a/app/src/main/resources/templates/solicitacao/editaPaciente.html
+++ b/app/src/main/resources/templates/solicitacao/editaPaciente.html
@@ -67,11 +67,11 @@
                         <div class="control">
                             <span>Situação:</span>
                             <label>
-                                <input th:field="*{situacao}" type="radio" value="pre-transplante" id="situacao.pre">
+                                <input th:field="*{situacao}" type="radio" value="Pré-transplante" id="situacao.pre">
                                 <span>Pré-transplante</span>
                             </label>
                             <label>
-                                <input th:field="*{situacao}" type="radio" value="pos-transplante" id="situacao.pos">
+                                <input th:field="*{situacao}" type="radio" value="Pós-transplante" id="situacao.pos">
                                 <span>Pós-transplante</span>
                             </label>
                         </div>
