--- a/app/src/main/resources/templates/solicitacao/editaPaciente.html
+++ b/app/src/main/resources/templates/solicitacao/editaPaciente.html
@@ -101,6 +101,7 @@
                 <div class="column">
                     <div class="field">
                         <div class="control">
+                            <span>Data de Entrada</span>
                             <div class="control">
                                 <input id="dataEntrada" placeholder="Clique para selecionar uma data" autocomplete="off"
                                        type="text" class="input input-fancy datepicker-futuro borda-arredondada" th:field="*{dataEntrada}"
