--- a/app/src/main/resources/templates/solicitacao/dadosSolicitacao.html
+++ b/app/src/main/resources/templates/solicitacao/dadosSolicitacao.html
@@ -202,7 +202,7 @@
                                     <label class="label">Gênero</label>
                                 </div>
                                 <div class="control">
-                                    <input class="input input-fancy" type="text" th:value="(${acomp.genero} == 'Feminino' ? 'Feminino' : 'Masculino')" disabled>
+                                    <input class="input input-fancy" type="text" th:value="${acomp.genero}" disabled>
                                 </div>
                             </div>
                         </div>
