<@julianemartins, @ingridDuarte> Valida cargo do Usuário

--- a/app/src/main/resources/templates/layout.html
+++ b/app/src/main/resources/templates/layout.html
@@ -21,7 +21,9 @@
     <script src="/js/validaCadastroSolicitacao.js"></script>
     <script src="/js/validacaoRegistrar.js"></script>
     <script src="/js/validaDataCheckinCheckout.js"></script>
+    <script src="/js/validaUsuario.js"></script>
     <script src="/js/validaSenhaUsuario.js"></script>
+
 </head>
 
 <body>
