--- a/app/src/main/resources/templates/solicitacao/editaSenhaUsuario.html
+++ b/app/src/main/resources/templates/solicitacao/editaSenhaUsuario.html
@@ -30,7 +30,10 @@
                     <div class="column">
                         <div class="field">
                             <div class="control">
+                                <p class="control has-icons-left has-icons-right margin-left-10">
+                                <i class="fas fa-lock"></i>
                                 <span>Senha</span>
+                                </p>
                                 <input class="validate input input-fancy" id="passwordUser" type="password" th:field="*{usuarios.senha}">
                             </div>
                         </div>
