--- a/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoHospital.html
+++ b/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoHospital.html
@@ -26,7 +26,7 @@
                     <div class="columns is-multiline is-lefty">
                         <div th:each="solicitacao : ${solicitacoesHospital}">
                             <div class="column">
-                                <div class="box">
+                                <div class="box box-shadow">
                                     <strong><span>Nome:</span></strong>
                                     <span th:text="${solicitacao.nome} + ' - '"></span>
                                     <strong><span>Status:</span></strong>
